# encrypt_3d

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: teaser.xcf
encrypt_3d/: config.py  image_encoder.py  image_loader.py  key_gen.py  main.py  mesh_gen.py
example/: key.stl  oshw.stl  small_circle.stl  small_heart.stl  small_key.stl  small_line.stl  small_simle.stl
