[metadata]
name = encrypt-3d
version = 0.0.1
author = Alessio Montuoro
author_email = github.com@montuoro.info
description = create "encrypted" 3D models for images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlessioM/simple-cli-template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

install_requires =
    click>=7.1.2
    loguru>=0.5.3
    python-dotenv>=0.15.0
    pydantic>=1.7.3
    imageio>=2.16.1
    numpy>=1.22.3
    tqdm>=4.64.0
    scikit-image>=0.19.2

[options.extras_require]
dev =
    pre-commit >= 2.10
    pytest >= 6.2.2
    pytest-cov>=2.11.1
    pytest-mock>=3.5.1
    build>=0.3.0

[options.entry_points]
console_scripts =
    encrypt_3d = encrypt_3d.main:command_line
